# trends-hacker-news

./: .gitignore
crawler/: Cargo.toml
crawler/src/: hn.rs  main.rs  stop-words.txt
kw-analyzer/: generate-keywords.py  preprocess.py
kw-analyzer/data/: stopwords.txt
