[package]
name = "trends-hn"
version = "0.1.0"
authors = ["Dmitry Ryzhkov <dimaryz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.19"
serde_json = "1.0.40"
serde = "1.0.97"
mongodb = "0.3.11"
chrono = "0.4.7"